css/custom.css
/** Global CSS **/
body{
    background-color:#000000;
    color:white;
    font-family: 'Krona One', sans-serif;
    font-weight:500;
    margin:0;
    text-transform:uppercase;
}
body .std{
    font-family: 'Cabin', serif;
}
h1,h2,h3,h4,h5,h6{
    font-weight:bold;
}
h3 {
	font-size: .9em;
}
a{
    text-decoration:none;
    color:#FF0000;
}
a:hover{
    text-decoration:none;
    color:#FFFFFF;
}
a:visited{
    text-decoration: none;
    color:#A9A9A9;
}
.page-title{
    margin:10px 0;
    padding:15px 0;
}
ul{
    margin:0;
    padding:0;
    list-style:none;
}
ul li{
    float:left;
}
.two-column-left.left{
    float:left;
    width:62%;
}
.two-column-left.right{
    float:right;
    width:32%;
}
.outer-wrapper{
    min-width:100%;
    min-height:100%;
    width:100%;
    background-image: url('../media/images/main-bg.jpg');
    position:absolute;
    background-size:100%;
    background-attachment:fixed;
    background-position:center center;
}
.fight-companion-home .page-title{
	display:none;
}
label {
	margin-right: 10px;
}

input {
	background-color: #2b170e;
    padding:15px;
    border:1px solid white;
    display:inline-block;
}
input, select, textarea{
    font-family: 'Krona One', sans-serif;
    color: white;
}

textarea:focus, input:focus {
    color: white;
}
#form_button{
    display:inline-block;
}
#form_button input {
	background-color: #2b170e;
    color: white;
}
::-webkit-input-placeholder {
    color: white;
}
:-moz-placeholder {
    color: white;
}
::-moz-placeholder {
    color: white;
}
:-ms-input-placeholder {
    color: white;
}
/** Header CSS **/
.social-icon{
    width:32px;
}
.header, .footer{
    width:100%;
}
.footer{
    background-color: rgba(0, 0, 0, .65);
}
.header:after, .header-wrapper:after {
    content: "";
    clear: both;
    display: table;
}
.header:after{
    clear:both;
}
.header-wrapper, .footer-wrapper{
    max-width:1300px;
    margin:0 auto;
}
.header-upper{
    height:32px;
}
.header-section{
    width:33%;
    float:left;
    height:200px;
    text-align:center;
}
.header-upper{
    text-align:right;
}
.header-links{
    width:96px;
    float:right;
    margin:0;
    list-style-type:none;
}
.header-links-item{
    display:inline;
    float:left;
}
#main-logo{
    max-width:120px;
}
.header-lower:after{
    clear:both;
}
/** Main Content Section CSS **/
.panel{
    padding:0 25%;
    text-align:center;
}
.panel-heading{
    margin-bottom:20px;
}
.panel-title{
    font-size:20px;
    margin-bottom:10px;
}
.panel-subtitle{
    text-transform:lowercase;
    font-weight:300;
    font-size:14px;
}
.handle{
    background:black;
    color:white;
    padding:5px;
    border:2px solid red;
}
.rankings h3{
    text-align: center;
    margin:0;
    font-size:20px;
}
.rankings p{
    border-top:1px solid red;
    border-bottom:1px solid red;
    margin-top:10px;
    margin-bottom:10px;
    padding:10px 0;
    text-align:center;
}
.rankings-table, .fight-list-table{
    width:100%;
    text-align:center;
}
.rankings-table table, .rankings-table th, .rankings-table td {
    border: 1px solid lightgray;
    padding:5px;
}
.fight-predictions{
    width: 45%;
    margin: 0 auto;
    text-align:center;
}
.fight-predictions h3{
    font-size:22px;
    background-color: #808080;
    margin-bottom: 0;
    padding: 10px;
}
.fight-predictions ul{
    margin-bottom:10px;
}
.fight-predictions li:first-child{
    font-size:18px;
}
.fight-predictions li{
    float:none;
}
.panel-gif{
	margin-top: 15px;
}
body #simplemodal-container{
    color:white;
    background-color: black;
}
body #simplemodal-container .simplemodal-data{
    padding:0;
}
#simplemodal-container .panel{
    padding:0 10%;
}
#contactform-response. #feedbackform-response{
    padding:10px;
    margin-top:10px;
    border-radius:10px;
}
#contactform-response.success, #feedbackform-response.success{
    background:green;
    border:2px solid lightgreen;
}
#contactform-response.error, #feedbackform-response.error{
    background:darkred;
    border:2px solid red;
}
.main{
    width:100%;
}
.main-wrapper{
    max-width:1300px;
    margin:0 auto;
	background-color: rgba(0, 0, 0, 0.4);
	padding: 0 15px 15px;
	border-radius: 15px;
}
.nav-wrapper{
    width:100%;
	background-color: rgba(0, 0, 0, .65);
	border-bottom: 2px solid red;
}
.nav{
    position:relative;
    margin:0 auto;
    max-width:1300px;
    padding:10px 0 25px 0;
}
.nav-links{
    text-align:center;
}
.nav-links li{
    width:20%;
}
.nav-links li.active{
    background:white;
}
.nav-links li.active a{
    color:black;
}
.nav-links li.active a:hover{
    color:red;
}
.nav-links li:nth-child(3){
    margin-top:-12px;
}
.nav-links{
    text-align:center;
}
.nav-links li:nth-child(3){
    margin-top:-12px;
}
.header-parent{
    text-align:center;
}
.header-parent a{
    font-weight:600;
    color: #d4d4d4;
}
.header-parent a:hover{
    color:red;
}

.nav.sticky {
    width:auto;
    position: fixed;
}

/** Footer CSS **/
.footer-menu{
    float:left;
}
.footer-left{
    text-align: left;
}
.footer-right{
    text-align:right;
}
.footer-center{
    text-align:center;
}
.footer{
    font-size:.6em;
    padding:10px 0;
    bottom:0;
    border-top:2px solid red;
}
.footer-wrapper{
    border-bottom:none;
}
.copyright{
    float:right;
    width:220px;
}
.copyright span{
    font-weight:400;
}
.footer input{
    background:transparent;
    padding:0;
    border:none;
    font-size: 9px;
    cursor:pointer;
    text-transform: uppercase;
}
.footer input:hover{
    color:red;
}
.footer-menu-item{
    padding: 0 15px;
}
.footer-menu-item a{
    color:white;
}
.footer-menu-item a:hover{
    text-decoration:underline;
}
/** PAge Structures **/
.content{
    width:100%;
}
/** Feedback form styling **/
.feedback-top, .feedback-email, .feedback-comment, .feedback-name{
    margin: 0 auto;
}
.feedback-top, .feedback-name, .feedback-email, .feedback-comment{
    width:100%;
    text-align:center;
    padding-bottom:20px;
}
.feedback-name input, .feedback-email input, .feedback-comment input{
    margin-bottom:20px;
}
#feedback-form .feedback-email, #feedback-form .feedback-comment{
    padding-bottom:0;
}
.feedback-comment textarea{
    color:black;
    margin-bottom:20px;
}
.error-validation{
    clear:both;
    font-size:10px;
    line-height:1em;
    margin-top:-20px;
    color:red;
    padding-bottom:5px;
    padding-top:5px;
}
ul.social-links-list li{
    display:inline-block;
}
ul.social-links-list li{
    float:none;
}
.about-center{
    text-align:center;
}
#about-logo{
    max-width:250px;
}
.about-personal{
    width:100%;
    text-align:center;
}
.bio-content{
    text-align:center;
    padding:10px;
}
.about-items li{
    float:none;
}
.fight-list{
    text-align:center;
}
.fight-list h3{
    font-size:22px;
    background-color: red;
    padding: 10px;
    margin-bottom: initial;
}
.fight-card{
    margin-bottom:30px;
    float:left;
    width:100%;
}
.fight-red{
	background-color: red;
	padding: 5px;
}.fight-black{
	background-color: #000000;
	padding: 2px;
}
.fight-grey{
	background-color: #808080;
	padding: 2px;
}
#fight-headline{
    font-size:30px;
    width:100%;
    text-align: center;
    background:black;
    color:red;
    margin:0;
}
.fight-listing li{
    float:none;
    text-align:center;
    padding:5px 0;
}
.fight-listing li:nth-child(odd){
    background:black;
}
.fight-listing li:nth-child(even){
    background:gray;
}
.video-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px; height: 0; overflow: hidden;
}

.video-container iframe, 
.video-container object,
.video-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

